package WARSZTATY.Warsztat_9_Diagramy_UML.P6_UML_Wiedza_praktyczna__Diagram_klas_i_Interfejsów__Relacje.nextDiagram;

public class Customer {
    private String name;
    private String surname;

    private ShoppingCard shoppingCard;

}
