package WARSZTATY.Warsztat_9_Diagramy_UML.P6_UML_Wiedza_praktyczna__Diagram_klas_i_Interfejsów__Relacje.nextDiagram;

import java.util.List;

public class ShoppingCard {

    private Customer customer;

    private List<Item> items;

}
