package WARSZTATY.Warsztat_9_Diagramy_UML.P6_UML_Wiedza_praktyczna__Diagram_klas_i_Interfejsów__Relacje.nextDiagram;

public class VIP extends Customer {
    private VIPCard vipCard;
}
